tests/neg/simple/parse-01.ts

/*@ c :: string */
var c = 1;

/*@ e :: #Array[#Immutable,string] */
var e = "aaa";

